--- a/OfO/OfO/Base.lproj/Main.storyboard
+++ b/OfO/OfO/Base.lproj/Main.storyboard
@@ -772,6 +772,9 @@
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="p1B-Nj-H26"/>
                                         </constraints>
                                         <state key="normal" image="btn_unenableTorch"/>
+                                        <connections>
+                                            <action selector="torchBtnClick:" destination="zyV-HJ-RgI" eventType="touchUpInside" id="K9E-Ke-a3v"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7iJ-vg-6R3">
                                         <rect key="frame" x="127" y="10" width="1" height="54"/>
@@ -962,6 +965,7 @@
                     </view>
                     <connections>
                         <outlet property="countDownLabel" destination="n8m-HE-bgv" id="tT2-xQ-9vT"/>
+                        <outlet property="torchBtn" destination="wSc-Kg-d62" id="iJG-nU-lJT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5zt-Z4-IZS" userLabel="First Responder" sceneMemberID="firstResponder"/>
